<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="data"
            type="ge.neso.info08.vm.TemplateViewModel" />

        <variable
            name="view"
            type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--this is top menu header-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_grey"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="@{data.showTopHeader ? view.VISIBLE : view.GONE}">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="20dp"
                        android:src="@drawable/two_line_icon" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{data.organizationsClickEvent()}"
                        android:src="@drawable/app_logo" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{data.registerClickEvent()}"
                        android:padding="20dp"
                        android:src="@drawable/user_icon" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent_dark"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{data.greyAreaClickEvent}"
                android:visibility="@{data.showExtraMenu ? view.VISIBLE : view.GONE}" />

            <!--additional menu-->
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:orientation="vertical"
                android:visibility="@{data.showExtraMenu ? view.VISIBLE : view.GONE}">

                <!--streets-->
                <LinearLayout
                    android:id="@+id/streets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="right"
                    android:onClick="@{data.streetsClickEvent()}"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <ge.neso.info08.views.GeorgianSlimCapsTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/streets"
                        android:textColor="@color/dark_item_color" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/streets_menu_icon" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background_grey" />

                <!--cities-->
                <LinearLayout
                    android:id="@+id/cities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="right"
                    android:onClick="@{data.citiesClickEvent()}"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <ge.neso.info08.views.GeorgianSlimCapsTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/cities"
                        android:textColor="@color/dark_item_color" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/cities_menu_icon" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background_grey" />

                <!--calendar-->
                <LinearLayout
                    android:id="@+id/calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="right"
                    android:onClick="@{data.calendarClickEvent()}"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <ge.neso.info08.views.GeorgianSlimCapsTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/calendar"
                        android:textColor="@color/dark_item_color" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/calendar_menu_icon" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background_grey" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/spinner"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{data.showSpinner ? view.VISIBLE : view.GONE}" />
        </FrameLayout>


        <!--main menu-->
        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:visibility="@{data.showMenu ? view.VISIBLE : view.GONE}">

            <!--organizations-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="@{data.organizationsClickEvent()}"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/organizations_menu_icon" />

                <ge.neso.info08.views.GeorgianSlimCapsTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/organizations"
                    android:textColor="@color/dark_item_color"
                    android:textSize="@dimen/text_xsmall" />

            </LinearLayout>

            <!--events-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="@{data.billboardClickEvent()}"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/bill_board_menu_icon" />

                <ge.neso.info08.views.GeorgianSlimCapsTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/billboard"
                    android:textColor="@color/dark_item_color"
                    android:textSize="@dimen/text_xsmall" />

            </LinearLayout>

            <!--transportation-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="@{data.transportationClickEvent()}"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/transportation_menu_icon" />

                <ge.neso.info08.views.GeorgianSlimCapsTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/transportation"
                    android:textColor="@color/dark_item_color"
                    android:textSize="@dimen/text_xsmall" />

            </LinearLayout>

            <!--exchange-->
            <LinearLayout
                android:id="@+id/exchange"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="@{data.exchangeClickEvent()}"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/exchange_menu_icon" />

                <ge.neso.info08.views.GeorgianSlimCapsTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/exchange"
                    android:textColor="@color/dark_item_color"
                    android:textSize="@dimen/text_xsmall" />



            </LinearLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="@drawable/green_box_with_ripple"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{data.extraMenuClickEvent}">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/three_dot_menu_icon" />

            </FrameLayout>


        </LinearLayout>


    </LinearLayout>
</layout>
